src/objects/Account/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <description>SYSTEM FIELD—Hostname parsed from standard Website field which allows fuzzy matching rules for deduplication.</description>
    <externalId>true</externalId>
    <inlineHelpText>SYSTEM FIELD—Hostname parsed from standard Website field which allows fuzzy matching rules for deduplication.</inlineHelpText>
    <label>Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>