src/objects/Account/fields/NumberOfContacts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfContacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum total of contacts directly associated with the account.</description>
    <inlineHelpText>Sum total of contacts directly associated with the account.</inlineHelpText>
    <label>Number of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>