src/objects/Account/fields/WebsiteSansProtocol__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSansProtocol__c</fullName>
    <formula>if(
  contains(Website, &quot;://&quot;),
  substitute(
    Website,
    left(
      Website,
      find(
        &quot;://&quot;,
        Website
      ) + 2
    ),
    &quot;&quot;
  ),
  Website
)</formula>
    <label>WebsiteSansProtocol</label>
    <type>Text</type>
</CustomField>