src/objects/Account/fields/WebsiteSansProtocolSansPath__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSansProtocolSansPath__c</fullName>
    <formula>if(contains(WebsiteSansProtocol__c, &quot;/&quot;), left(WebsiteSansProtocol__c, find(&quot;/&quot;, WebsiteSansProtocol__c) - 1), WebsiteSansProtocol__c)</formula>
    <label>WebsiteSansProtocolSansPath</label>
    <type>Text</type>
</CustomField>