src/objects/Account/fields/WebsiteSansProtocolSansPathSansWww__c.field-meta.xml
<CustomField>
    <fullName>WebsiteSansProtocolSansPathSansWww__c</fullName>
    <formula>if(left(WebsiteSansProtocolSansPath__c, 4) = &quot;www.&quot;, right(WebsiteSansProtocolSansPath__c, len(WebsiteSansProtocolSansPath__c) - 4), WebsiteSansProtocolSansPath__c)</formula>
    <label>WebsiteSansProtocolSansPathSansWww</label>
    <type>Text</type>
</CustomField>