src/objects/Account/fields/WebsiteText__c.field-meta.xml
<CustomField>
    <fullName>WebsiteText__c</fullName>
    <description>SYSTEM—Searchable text copy of standard Website field which is not searchable.</description>
    <externalId>true</externalId>
    <inlineHelpText>SYSTEM—Searchable text copy of standard Website field which is not searchable.</inlineHelpText>
    <label>Website (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>